[package]
name = "eavesdropper"
version = "0.1.0"
authors = ["Thomas Bye <ThomasBye1@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
etherparse = "0.9.0"
log_t = "0.1.0"
sled = "0.34.6"
rustyline = "7.1.0"

cliargs_t = { path = "../../cliargs_t/cliargs_t" }