[package]
name = "ecli"
version = "0.1.0"
authors = ["Thomas Bye <ThomasBye1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
rustyline = "7.1.0"
cliargs_t = "0.1.0"
libloading = "0.6.7"
petgraph = "0.5.1"
etherparse = "0.9.0"
sled = "0.34.6"

#My crates
log_t = "0.1.0"
#My crates and in this workspace
eframework = { path = "../eframework" }

[dependencies.abi_stable]
version = "0.9.3"
default-features = false
features = [ ]