[package]
name = "eframework"
version = "0.1.0"
authors = ["Thomas Bye <ThomasBye1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
semver = "0.11.0"

[dependencies.abi_stable]
version = "0.9.3"
default-features = false
features = [ ]