[package]
name = "eframework"
version = "0.1.0"
authors = ["Thomas Bye <ThomasBye1@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/TBye101/eavesdropper"
license= "GPL-3.0 License"
keywords = ["plugin", "eavesdropper", "pcap", "packet-analyzer", "library"]

[dependencies]
static_assertions = "1.1.0"
semver = "0.11.0"

[dependencies.abi_stable]
version = "0.9.3"
default-features = false
features = [ ]

[dev-dependencies]
proptest = "1.0.0"