[package]
name = "emodules"
version = "0.1.0"
authors = ["Thomas Bye <ThomasBye1@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
semver = "0.11.0"

#My crates and in this workspace
eframework = { path = "../eframework" }

[dependencies.abi_stable]
version = "0.9.3"
default-features = false
features = [ ]